examples/errors/syntax_incomplete_say.jc
// ================================================
// ERROR: Incomplete Say Statement
// Expected: [SyntaxError] Incomplete 'say' statement
// ================================================

// Statement is cut off
say(
